# GCC-SWSS

./: .gitignore  DEPLOY.md  README.md  amendment_library.yaml  render.yaml  run-api.ps1  run-web.ps1
.claude/: launch.json
api/: Dockerfile  requirements.txt
api/app/: deps.py  main.py  settings.py  supabase_client.py
docs/: EXECUTIVE_SUMMARY.md  SCIENTIFIC_BASIS.md  WORKED_EXAMPLE.md
docs/spec/: AI_Layer.md  Amendment_Physics.md  Architecture.md  Climate.md  Data_Architecture.md  Final_Architecture.md  Flux_Attribution_Engine.md  GCC_SWSS.md  Hydrology.md  Orchestration_layer.md  (+10 more)
engine/: README.md  pyproject.toml
engine/swss/: __init__.py  _data.py  schemas.py
engine/swss/amendments/: engine.py
engine/swss/climate/: penman_monteith.py  weather.py
engine/swss/data/: amendment_library.yaml  climate_library.yaml  crop_library.yaml  soil_library.yaml
engine/swss/economics/: economics.py
engine/swss/flux/: water_fate.py
engine/swss/orchestrator/: pipeline.py
engine/swss/plants/: crop_coefficients.py  root_uptake.py  stress.py
engine/swss/reporting/: narrative.py  report.py
engine/swss/security/: wsi.py
engine/swss/soil/: awc.py  library.py  rosetta_ptf.py  vg.py
engine/swss/uncertainty/: monte_carlo.py  scenarios.py
engine/swss/waterbalance/: drainage.py  runoff.py  storage.py  water_balance.py
engine/tests/: test_amendments.py  test_climate.py  test_monte_carlo.py  test_pipeline.py  test_vg.py  test_water_balance.py
scripts/: exec_summary_pdf.py
supabase/: config.toml
web/: .env.local.example  package-lock.json  package.json
(+18 files in other folders)
